--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="swiper-slide">
     <div class="b">
 
-    <img src="img/扫雷.png" alt=""> <a href=""><span>扫雷</span></a>
+    <img src="img/扫雷.png" alt=""> <a href="/Gobang" target="_blank"><span>扫雷</span></a>
     </div>
     </div>
     <div class="swiper-slide">
