--- a/index.html
+++ b/index.html
@@ -32,33 +32,33 @@
     <div class="swiper-slide">
     <div class="b">
     
-    <img src="img/yidng.png" alt=""><a href="/yd" target="_blank"><span>移动</span></a>
+    <img src="img/yidng.png" alt=""><a href=""><span>移动</span></a>
     </div>
     </div>
     <div class="swiper-slide">
     <div class="b">
-    <img src="img/wuziqi.png" alt=""><a href="/Gobang" target="_blank"><span>五子棋</span></a>
+    <img src="img/wuziqi.png" alt=""><a href=""><span>五子棋</span></a>
     </div>
     </div>
     <div class="swiper-slide">
     <div class="b">
-    <img src="img/yintai.png" alt=""><a href="/yintai" target="_blank"><span>银泰</span></a>
+    <img src="img/yintai.png" alt=""><a href=""><span>银泰</span></a>
     </div>
     </div>
     <div class="swiper-slide">
     <div class="b">
-    <img src="img/百度.png" alt=""><a href="/baiduyuqing" target="_blank"><span>百度舆情</span></a>
+    <img src="img/百度.png" alt=""><a href=""><span>百度</span></a>
     </div>
     </div>
     <div class="swiper-slide">
     <div class="b">
-    <img src="img/打字.png" alt=""><a href=".dazi" target="_blank"><span>打字游戏</span></a>
+    <img src="img/打字.png" alt=""><a href=""><span>打字游戏</span></a>
     </div>
     </div>
     <div class="swiper-slide">
     <div class="b">
 
-    <img src="img/扫雷.png" alt=""> <a href="/saolei" target="_blank"><span>扫雷</span></a>
+    <img src="img/扫雷.png" alt=""> <a href="/Gobang" target="_blank"><span>扫雷</span></a>
     </div>
     </div>
     <div class="swiper-slide">
