--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
     <div class="swiper-slide">
     <div class="b">
-    <img src="img/wuziqi.png" alt=""><a href=""><span>五子棋</span></a>
+    <img src="img/wuziqi.png" alt=""><a href="/Gobang" target="_blank"><span>五子棋</span></a>
     </div>
     </div>
     <div class="swiper-slide">
@@ -58,12 +58,12 @@
     <div class="swiper-slide">
     <div class="b">
 
-    <img src="img/扫雷.png" alt=""> <a href="/Gobang" target="_blank"><span>扫雷</span></a>
+    <img src="img/扫雷.png" alt=""> <a href="" target="_blank"><span>扫雷</span></a>
     </div>
     </div>
     <div class="swiper-slide">
     <div class="b">
-    <img src="img/xuesheng.png" alt=""><a href=""><span>学生管理</span></a>
+    <img src="img/xuesheng.png" alt=""><a href="/xuesheng" target="_blank"><span>学生管理</span></a>
     </div>
     </div>
   </div>
