--- a/index.html
+++ b/index.html
@@ -14,65 +14,70 @@
 <div class="anc"><img src="img/shang.png" alt=""></div>
  <div class="page1">
  <div class="pop"></div>
- <div class="circle xio1"><a href="#自我介绍">自我介绍</a></div>
+ <div class="circle xio1"><a href="#自我介绍">关于我</a></div>
  <div class="circle xio2"><a href="#作品">作品</a></div>
  <div class="circle xio3"><a href="#首页">首页</a></div>
- <div class="circle xio4"><a href="#联系方式">联系方式</a></div>
+ <div class="circle xio4"><a href="#联系方式">联系我</a></div>
 
  </div>
 
   </div>
+
+
   <div class="section" id="section2">
 <div class="anc"><img src="img/shang.png" alt=""></div>
 <div class="op"></div>
   <div class="a">
+  <div class="tx">
   <div class="c">
 <div class="swiper-container">
+
   <div class="swiper-wrapper">
+   <div class="b">
     <div class="swiper-slide">
-    <div class="b">
-    
-    <img src="img/yidng.png" alt=""><a href="/yd" target="_blank"><span>移动</span></a>
+   
+    <img src="img/yidng.png" alt="">
+    <a href="">
+    <span>移动</span>
+    </a>
     </div>
-    </div>
-    <div class="swiper-slide">
-    <div class="b">
-    <img src="img/wuziqi.png" alt=""><a href="/Gobang" target="_blank"><span>五子棋</span></a>
-    </div>
-    </div>
-    <div class="swiper-slide">
-    <div class="b">
-    <img src="img/yintai.png" alt=""><a href="/yintai" target="_blank"><span>银泰</span></a>
-    </div>
+  
     </div>
     <div class="swiper-slide">
     <div class="b">
-    <img src="img/百度.png" alt=""><a href="/baiduyuqing" target="_blank"><span>百度舆情</span></a>
+    <img src="img/wuziqi.png" alt=""><a href=""><span>五子棋</span></a>
     </div>
     </div>
     <div class="swiper-slide">
     <div class="b">
-    <img src="img/打字.png" alt=""><a href=".dazi" target="_blank"><span>打字游戏</span></a>
+    <img src="img/yintai.png" alt=""><a href=""><span>银泰</span></a>
+    </div>
+    </div>
+    <div class="swiper-slide">
+    <div class="b">
+    <img src="img/百度.png" alt=""><a href=""><span>百度</span></a>
+    </div>
+    </div>
+    <div class="swiper-slide">
+    <div class="b">
+    <img src="img/打字.png" alt=""><a href=""><span>打字游戏</span></a>
     </div>
     </div>
     <div class="swiper-slide">
     <div class="b">
 
-<<<<<<< HEAD
-    <img src="img/扫雷.png" alt=""> <a href="" target="_blank"><span>扫雷</span></a>
-=======
-    <img src="img/扫雷.png" alt=""> <a href="/saolei" target="_blank"><span>扫雷</span></a>
->>>>>>> parent of f0487eb... Revert "1"
+    <img src="img/扫雷.png" alt=""> <a href=""><span>扫雷</span></a>
     </div>
     </div>
     <div class="swiper-slide">
     <div class="b">
-    <img src="img/xuesheng.png" alt=""><a href="/xuesheng" target="_blank"><span>学生管理</span></a>
+    <img src="img/xuesheng.png" alt=""><a href=""><span>学生管理</span></a>
     </div>
     </div>
   </div>
   </div>
   </div>
+    </div>
 </div>
   <div class="aa">
   <div class="ca">
@@ -120,7 +125,7 @@
   <div class="xian"></div>
   <div class="name">姓名: 张亮亮</div>
   <div class="sex">性别: 男</div>
-  <p class="duan">我是一名前端工程师,我很喜欢这个职业.我对我的专业技能非常有信心,精通html,css以及javascript,jQuery脚本语言,并且对ps,AI软件的操作有一定的了解.我的性格比较随和,乐于尝试新事物,适应环境能力强,有充沛的经历投身到工作中.
+  <p class="duan">我是一名前端工程师,开始接触的时候感觉有点难，后来慢慢的就发现了它的神奇之后，就被它所吸引。我很喜欢这个职业.我对我的专业技能非常有信心,精通html,css,jQuery,javascript脚本语言,并且对ps,AI软件的操作有一定的了解.我的性格比较随和,乐于尝试新事物,适应环境能力强,有充沛的精力投身到工作中.
   </p>
   <div class="jineng">
   <h1>我的技能</h1>
@@ -138,39 +143,19 @@
  </div>
   </div>
   <div class="section" id="section4">
-
   <div class="lianxi">
-  <h1>联系方式</h1>
-  <div class="box">
-  <div class="name"> <span>name:</span> 
-  <input type="text">
-  </div>
-  <div class="email">
-  <span>email:</span>
-  <input type="text">
-  </div>
-  <div class="age">
-  <span>age:</span>
-    <input type="text" >
-  </div>
-  <div class="phone">
- <span>phone:</span>
-   <input type="text">
-  </div>
-  <div class="me">
-  call:18435117279
-  </div>
-  <div class="qq">
-  QQ:314045061
+  <h1 class="hl">联系我</h1>
+  <div class="wo">我的电话:18435117279</div>
+  <div class="wo">我的QQ:1553239839</div>
+  <div class="wo">我的邮箱:1553239839@qq.com</div>
+  <div class="wo">我的地址:山西省太原市</div>
+  <div class="me">Contact me<div class="ta"></div></div>
+
+ 
+
   </div>
 
-  <div class="message">
-  <a href="#">message</a>
-  <textarea class="pa"></textarea>
-  </div>
- </div>
-  </div>
-  </div>
+  
 </div>
 
 	
