--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
     <div class="swiper-slide">
     <div class="b">
-    <img src="img/xuesheng.png" alt=""><a href="/xuesheng" target="_blank"><span>学生管理</span></a>
+    <img src="img/xuesheng.png" alt=""><a href="/student" target="_blank"><span>学生管理</span></a>
     </div>
     </div>
   </div>
@@ -86,30 +86,30 @@
     <div class="swiper-slide">
     
     <div class="ba">移动</div>
-    <a href="" class="pa"></a>
+    <a href="/yd" target="_blank" class="pa"></a>
     </div>
     <div class="swiper-slide">
-    <a href="" class="pa"></a>
+    <a href="/Gobang" target="_blank"  class="pa"></a>
     <div class="ba">五子棋</div>
     </div>
     <div class="swiper-slide">
-    <a href="" class="pa"></a>
+    <a href="/yintai" target="_blank"  class="pa"></a>
     <div class="ba">银泰</div>
     </div>
     <div class="swiper-slide">
-    <a href="" class="pa"></a>
-    <div class="ba">百度</div>
+    <a href="/baiduyuqing" target="_blank" class="pa"></a>
+    <div class="ba">百度舆情</div>
     </div>
     <div class="swiper-slide">
-    <a href="" class="pa"></a>
+    <a href="dazi" target="_blank" class="pa"></a>
     <div class="ba">打字游戏</div>
     </div>
     <div class="swiper-slide">
-    <a href="" class="pa"></a>
+    <a href="/sao" target="_blank" class="pa"></a>
     <div class="ba">扫雷</div>
     </div>
     <div class="swiper-slide">
-    <a href="" class="pa"></a>
+    <a href="/student" target="_blank" class="pa"></a>
     <div class="ba">学生管理</div>
     </div>
   </div>
