--- a/index.html
+++ b/index.html
@@ -74,6 +74,16 @@
     <img src="img/xuesheng.png" alt=""><a href="/student" target="_blank"><span>学生管理</span></a>
     </div>
     </div>
+       <div class="swiper-slide">
+    <div class="b">
+    <img src="img/todo.png" alt=""><a href="/todo" target="_blank"><span>TODO</span></a>
+    </div>
+    </div>
+           <div class="swiper-slide">
+    <div class="b">
+    <img src="img/wangyi.jpg" alt=""><a href="/wangyi" target="_blank"><span>网易新闻</span></a>
+    </div>
+    </div>
   </div>
   </div>
   </div>
@@ -111,6 +121,14 @@
     <div class="swiper-slide">
     <a href="/student" target="_blank" class="pa"></a>
     <div class="ba">学生管理</div>
+    </div>
+        <div class="swiper-slide">
+    <a href="/todo" target="_blank" class="pa"></a>
+    <div class="ba">TODO</div>
+    </div>
+        <div class="swiper-slide">
+    <a href="/wangyi" target="_blank" class="pa"></a>
+    <div class="ba">网易新闻</div>
     </div>
   </div>
   </div>
