--- a/index.html
+++ b/index.html
@@ -33,6 +33,34 @@
 <div class="swiper-container">
 
   <div class="swiper-wrapper">
+
+      <div class="swiper-slide">
+   <div class="b">
+    <img src="img/apple.jpg" alt="">
+    <a href="/apple" target="_blank">
+    <span>苹果</span>
+    </a>
+    </div>
+  
+    </div>
+        <div class="swiper-slide">
+   <div class="b">
+    <img src="img/shangdian.png" alt="">
+    <a href="/baidushangdian" target="_blank">
+    <span>百度商店</span>
+    </a>
+    </div>
+  
+    </div>
+        <div class="swiper-slide">
+   <div class="b">
+    <img src="img/京东.png" alt="">
+    <a href="/WJD" target="_blank">
+    <span>京东商城</span>
+    </a>
+    </div>
+  
+    </div>
    
     <div class="swiper-slide">
    <div class="b">
@@ -93,8 +121,20 @@
   <div class="ca">
 <div class="swiper-container1">
   <div class="swiper-wrapper">
-    <div class="swiper-slide">
+       <div class="swiper-slide">
+    <div class="ba">苹果官网首页</div>
+    <a href="/apple" target="_blank" class="pa"></a>
+    </div>
+           <div class="swiper-slide">
+    <div class="ba">百度商店</div>
+    <a href="/baidushangdian" target="_blank" class="pa"></a>
+    </div>
+      <div class="swiper-slide">
     
+    <div class="ba">京东</div>
+    <a href="/WJD" target="_blank" class="pa"></a>
+    </div>
+    <div class="swiper-slide">  
     <div class="ba">移动</div>
     <a href="/yd" target="_blank" class="pa"></a>
     </div>
@@ -107,7 +147,7 @@
     <div class="ba">银泰</div>
     </div>
     <div class="swiper-slide">
-    <a href="/baiduyuqing" target="_blank" class="pa"></a>
+    <a href="/baidu" target="_blank" class="pa"></a>
     <div class="ba">百度舆情</div>
     </div>
     <div class="swiper-slide">
