--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <div class="anc"><img src="img/shang.png" alt=""></div>
  <div class="page1">
  <div class="pop"></div>
- <div class="circle xio1"><a href="#自我介绍">关于我</a></div>
+ <div class="circle xio1"><a href="#关于我">关于我</a></div>
  <div class="circle xio2"><a href="#作品">作品</a></div>
  <div class="circle xio3"><a href="#首页">首页</a></div>
- <div class="circle xio4"><a href="#联系方式">联系我</a></div>
+ <div class="circle xio4"><a href="#联系我">联系我</a></div>
 
  </div>
 
@@ -41,7 +41,14 @@
     <span>苹果</span>
     </a>
     </div>
-  
+    </div>
+          <div class="swiper-slide">
+   <div class="b">
+    <img src="img/icloud.jpg" alt="">
+    <a href="/iCloud" target="_blank">
+    <span>iCloud</span>
+    </a>
+    </div>
     </div>
         <div class="swiper-slide">
    <div class="b">
@@ -121,6 +128,14 @@
   <div class="ca">
 <div class="swiper-container1">
   <div class="swiper-wrapper">
+        <div class="swiper-slide">
+    <a href="/wangyi" target="_blank" class="pa"></a>
+    <div class="ba">网易新闻</div>
+    </div>
+         <div class="swiper-slide">
+    <div class="ba">手机京东</div>
+    <a href="/applejd" target="_blank" class="pa"></a>
+    </div>
        <div class="swiper-slide">
     <div class="ba">苹果官网首页</div>
     <a href="/apple" target="_blank" class="pa"></a>
@@ -166,10 +181,7 @@
     <a href="/todo" target="_blank" class="pa"></a>
     <div class="ba">TODO</div>
     </div>
-        <div class="swiper-slide">
-    <a href="/wangyi" target="_blank" class="pa"></a>
-    <div class="ba">网易新闻</div>
-    </div>
+  
   </div>
   </div>
   </div>
