--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
         <div class="swiper-slide">
    <div class="b">
-    <img src="img/shangdian.png" alt="">
+    <img src="img/shangdian.jpg" alt="">
     <a href="/baidushangdian" target="_blank">
     <span>百度商店</span>
     </a>
