--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </div>
     <div class="swiper-slide">
     <div class="b">
-    <img src="img/百度.png" alt=""><a href="/baiduyuqing" target="_blank"><span>百度舆情</span></a>
+    <img src="img/百度.png" alt=""><a href="/baidu" target="_blank"><span>百度舆情</span></a>
     </div>
     </div>
     <div class="swiper-slide">
@@ -148,6 +148,11 @@
     
     <div class="ba">京东</div>
     <a href="/WJD" target="_blank" class="pa"></a>
+    </div>
+          <div class="swiper-slide">
+    
+    <div class="ba">iCloud</div>
+    <a href="/iCloud" target="_blank" class="pa"></a>
     </div>
     <div class="swiper-slide">  
     <div class="ba">移动</div>
