--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
   <div class="xian"></div>
   <div class="name">姓名: 张亮亮</div>
   <div class="sex">性别: 男</div>
-  <p class="duan">我是一名前端工程师,开始接触的时候感觉有点难，后来慢慢的就发现了它的神奇之后，就被它所吸引。我很喜欢这个职业.我对我的专业技能非常有信心,精通html,css,jQuery,javascript脚本语言,并且对ps,AI软件的操作有一定的了解.我的性格比较随和,乐于尝试新事物,适应环境能力强,有充沛的精力投身到工作中.
+  <p class="duan">我是一名前端工程师,开始接触的时候感觉它有点难，后来慢慢的就发现了它的神奇之后，被它所吸引。我很喜欢这个职业.我对我的专业技能非常有信心,精通html,css,jQuery,javascript脚本语言,并且对ps,AI软件的操作有一定的了解.我的性格比较随和,乐于尝试新事物,适应环境能力强,有充沛的精力投身到工作中.
   </p>
   <div class="jineng">
   <h1>我的技能</h1>
